--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -172,7 +172,7 @@ border-radius: 20px !important;
 }
 
 .timeline_header {   
-  background-color: #424242 !important;
+  background-color: #13a7dd !important;
 }
 
 .timeline_text {
@@ -526,3 +526,47 @@ width:50px !important ;
   bottom: calc(50% - 110px);
 }
 
+
+.background_main {
+  background: url("auctionMain.png");
+  height: 100%;
+  background-attachment: fixed; 
+
+    /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+.background_create {
+  background: url("auctionCreate.jpg");
+  height: 100vh;
+  background-attachment: fixed; 
+
+    /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+
+
+.background_result {
+  background: url("auctionResult.png");
+  
+  height: 100vh;
+  background-attachment: fixed; 
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+
+.background_authorize {
+  background: url("auctionAuthorize.png");
+  height: 100%;
+  background-attachment: fixed; 
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
